--- a/HW11.ipynb
+++ b/HW11.ipynb
@@ -194,9 +194,10 @@
     "\n",
     "# TODO: get right and left halves\n",
     "#       by reading 128 rows of 1 pixel columns every 16 columns\n",
-    "left_t = torch.zeros(128, 64)    # need to change this to grab actual pixels\n",
-    "right_t = torch.zeros(128, 64)   # need to change this to grab actual pixels\n",
-    "\n",
+    "#left_t = torch.zeros(128, 64,3)    # need to change this to grab actual pixels\n",
+    "left_t = img_00_t[:128, ::16, :]\n",
+    "#right_t = torch.zeros(128, 64,3)   # need to change this to grab actual pixels\n",
+    "right_t = img_00_t[128:256, ::16, :]\n",
     "# stack results\n",
     "img_00_pxs = torch.stack((left_t, right_t), dim=1)\n",
     "\n",
@@ -373,7 +374,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3.9.17 ('hf-model')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -387,12 +388,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "89e384cab7c47fb35ec95d2248b519cf922ee174880eed636c26cdfb6c4df768"
-   }
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
