correct the image 00 with the rigth half from the center

--- a/HW11.ipynb
+++ b/HW11.ipynb
@@ -178,6 +178,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_00.size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "right_t.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "tags": [
      "work_cell"
@@ -197,7 +215,7 @@
     "#left_t = torch.zeros(128, 64,3)    # need to change this to grab actual pixels\n",
     "left_t = img_00_t[:128, ::16, :]\n",
     "#right_t = torch.zeros(128, 64,3)   # need to change this to grab actual pixels\n",
-    "right_t = img_00_t[128:256, ::16, :]\n",
+    "right_t = img_00_t[img_00.size[1]//2 - 64:img_00.size[1]//2 + 64, ::16, :]\n",
     "# stack results\n",
     "img_00_pxs = torch.stack((left_t, right_t), dim=1)\n",
     "\n",
