--- a/HW11.ipynb
+++ b/HW11.ipynb
@@ -251,11 +251,11 @@
     "display(img_01)\n",
     "\n",
     "# TODO: put into Tensor\n",
-    "\n",
+    "img_01_t = Tensor(img_01.pixels).reshape(img_01.size[1], img_01.size[0], -1)\n",
     "# TODO: extract evenly-spaced pixels by\n",
     "#       slicing the original image at every 8 columns and 4 rows.\n",
-    "img_01_pxs = torch.zeros(128, 128) # change this\n",
-    "\n",
+    "#img_01_pxs = torch.zeros(128, 128) # change this\n",
+    "img_01_pxs = img_01_t[::4, ::8, :]\n",
     "# display message\n",
     "display(make_image(img_01_pxs))"
    ]
