--- a/HW11.ipynb
+++ b/HW11.ipynb
@@ -296,11 +296,11 @@
     "display(img_02)\n",
     "\n",
     "# TODO: put into Tensor\n",
-    "\n",
+    "img_02_t = Tensor(img_02.pixels).reshape(img_02.size[1], img_02.size[0], -1)\n",
     "# TODO: extract B value of evenly-spaced pixels starting at (0,0), (1,1) and (2,2)\n",
-    "img_02_R = torch.zeros(128, 128) # change this\n",
-    "img_02_G = torch.zeros(128, 128) # change this\n",
-    "img_02_B = torch.zeros(128, 128) # change this\n",
+    "img_02_R = img_02_t[::4, ::8, 2] # change this\n",
+    "img_02_G = img_02_t[1::4, 1::8, 2] # change this\n",
+    "img_02_B = img_02_t[2::4, 2::8, 2] # change this\n",
     "\n",
     "# stack results along pixel dimension\n",
     "img_02_pxs = torch.stack((img_02_R, img_02_G, img_02_B), dim=2)\n",
