--- a/HW11.ipynb
+++ b/HW11.ipynb
@@ -364,6 +364,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_04_crop_t.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_04_t.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "tags": [
      "work_cell"
@@ -376,11 +394,11 @@
     "display(img_04)\n",
     "\n",
     "# TODO: put into Tensor\n",
-    "\n",
+    "img_04_t = Tensor(img_04.pixels).reshape(img_04.size[1], img_04.size[0], -1)\n",
     "# TODO: crop out center 128x128 pixels\n",
-    "\n",
+    "img_04_crop_t = img_04_t[img_04.size[1]//2 - 64:img_04.size[1]//2 + 64, img_04.size[0]//2 - 64:img_04.size[0]//2 + 64, :]\n",
     "# TODO: get lowest 3 bits of all pixels\n",
-    "img_04_pxs = torch.zeros(128, 128) # change this\n",
+    "img_04_pxs = (img_04_crop_t % 8) * 32 # change this\n",
     "\n",
     "# display message\n",
     "display(make_image(img_04_pxs))"
